tests/negative/bad_break.def
// Unit test for a bad break -- a break outside of a relevant scope.

def foo () -> void
begin
    break;
end
